full buffer read attempt